Add websites availables